# core

./: .dockerignore  .dprint.jsonc  .editorconfig  .gitignore  .mise.toml  .rustfmt.toml  .taplo.toml  Cargo.toml  README.md  core.slnx  mprocs.yaml  pom.xml
.github/workflows/: check.yml  test.yml
config/: o2.env
data/model-modules/model-face1/pkg/: package.json
data/model-modules/model-har-motion1/pkg/: package.json
libs/edge-toolkit/: Cargo.toml
libs/edge-toolkit/src/: args.rs  auth.rs  config.rs  input.rs  lib.rs  ports.rs  ws.rs  ws_server.rs
libs/edge-toolkit/tests/: args.rs
libs/web/: Cargo.toml
libs/web/src/: lib.rs
services/modules/: Cargo.toml
services/modules/src/: lib.rs
services/modules/tests/: api_modules.rs
services/storage/: Cargo.toml
services/storage/src/: lib.rs
services/ws/: Cargo.toml
services/ws-modules/audio1/: Cargo.toml
services/ws-modules/audio1/src/: lib.rs
services/ws-modules/bluetooth/: Cargo.toml
services/ws-modules/bluetooth/src/: lib.rs
services/ws-modules/comm1/: Cargo.toml
services/ws-modules/comm1/src/: lib.rs
services/ws-modules/dart-comm1/: pubspec.yaml
services/ws-modules/dart-comm1/lib/: dart_comm1.dart
services/ws-modules/dart-comm1/pkg/: et_ws_dart_comm1.js  package.json
services/ws-modules/data1/: Cargo.toml
services/ws-modules/data1/src/: lib.rs
services/ws-modules/dotnet-data1/: .gitignore  Program.cs  dotnet-data1.csproj
services/ws-modules/dotnet-data1/pkg/: .gitignore  et_ws_dotnet_data1.js  package.json
services/ws-modules/face-detection/: Cargo.toml  package.json
services/ws-modules/face-detection/src/: lib.rs  test_face_detection.rs
services/ws-modules/face-detection/tests/: web.rs
services/ws-modules/geolocation/: Cargo.toml
services/ws-modules/geolocation/src/: lib.rs
services/ws-modules/graphics-info/: Cargo.toml
services/ws-modules/graphics-info/src/: lib.rs
services/ws-modules/har1/: Cargo.toml  package.json
services/ws-modules/har1/src/: lib.rs  test_har1.rs
services/ws-modules/har1/tests/: web.rs
services/ws-modules/java-data1/pkg/: et_ws_java_data1.js  package.json
services/ws-modules/java-data1/src/main/java/au/edu/curtin/et/: Data1.java
services/ws-modules/nfc/: Cargo.toml
services/ws-modules/nfc/src/: lib.rs
services/ws-modules/pydata1/: pyproject.toml
services/ws-modules/pydata1/pkg/: .gitignore  et_ws_pydata1.js  package.json
services/ws-modules/pydata1/pydata1/: __init__.py
services/ws-modules/pyface1/: package.json  pyproject.toml
services/ws-modules/pyface1/pkg/: et_ws_pyface1.js
services/ws-modules/pyface1/pyface1/: __init__.py  face_detection.py
services/ws-modules/pyface1/tests/: test_face_detection.py
services/ws-modules/sensor1/: Cargo.toml
services/ws-modules/sensor1/src/: lib.rs
services/ws-modules/speech-recognition/: Cargo.toml
services/ws-modules/speech-recognition/src/: lib.rs
services/ws-modules/video1/: Cargo.toml
services/ws-modules/video1/src/: lib.rs
services/ws-modules/zig-data1/: build.zig  build.zig.zon
services/ws-modules/zig-data1/pkg/: .gitignore  et_ws_zig_data1.js  et_ws_zig_data1_worker.js  package.json
services/ws-modules/zig-data1/src/: main.zig  util.c
services/ws-server/: Cargo.toml  Dockerfile  README.md
services/ws-server/src/: config.rs  lib.rs  main.rs  otlp.rs  tls.rs
services/ws-server/static/: app.js  index.html  package.json  style.css
services/ws-server/tests/: api_modules.rs
services/ws-wasm-agent/: Cargo.toml
services/ws-wasm-agent/src/: lib.rs
services/ws-wasm-agent/tests/: web.rs
services/ws/src/: lib.rs
utilities/cli/: Cargo.toml  README.md
utilities/cli/src/: lib.rs  main.rs  test_generate_deployment.rs  tests.rs
utilities/onnx/: Cargo.toml
utilities/onnx/src/: main.rs
utilities/pyproject-to-package-json/: Cargo.toml
utilities/pyproject-to-package-json/src/: main.rs
verification/local/input/: facility-security-scenario.yaml
verification/local/output/facility-security-scenario/: README.md  compose.yaml  mise.toml
