[workspace.package]
edition = "2024"
license = "Apache-2.0 and MIT"
repository = "https://github.com/edge-toolkit/core"
rust-version = "1.87.0"

[workspace]
members = [
  "libs/edge-toolkit",
  "services/ws-modules/comm1",
  "services/ws-modules/data1",
  "services/ws-modules/face-detection",
  "services/ws-modules/har1",
  "services/ws-server",
  "services/ws-wasm-agent",
]
resolver = "2"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "v7"] }
