[package]
name = "edge-toolkit"
description = "A collection of utilities and common code for Edge Toolkit services"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 or MIT"
repository = "https://github.com/edge-toolkit/core"

[dependencies]
serde.workspace = true
serde_json.workspace = true
