[package]
name = "edge-toolkit"
description = "A collection of utilities and common code for Edge Toolkit services"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
secrecy.workspace = true
serde.workspace = true
serde-env.workspace = true
serde_default.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
rstest.workspace = true
