[package]
name = "et-storage-service"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
actix-files = "0.6"
actix-web = "4"
edge-toolkit = { path = "../../libs/edge-toolkit" }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
tracing.workspace = true
