[package]
name = "et-ws-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
actix = "0.13"
actix-files = "0.6"
actix-web = { version = "4", features = ["rustls-0_23"] }
actix-web-actors = "4"
edge-toolkit = { path = "../../libs/edge-toolkit" }
# mime = "0.3"
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["logs", "metrics", "trace"] }
opentelemetry_sdk = "0.31"
rcgen = "0.14"
rustls = "0.23"
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
#opentelemetry-actix-web = "0.10"
chrono.workspace = true
clap = { version = "4.4", features = ["derive"] }
futures-util = "0.3"
local-ip-address = "0.6"
qr2term = "0.3"
uuid.workspace = true

[dependencies.actix-rt]
version = "2"
