[package]
name = "et-ws-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
actix = "0.13"
actix-rt = "2"
actix-web = { version = "4", features = ["rustls-0_23"] }
chrono.workspace = true
clap.workspace = true
edge-toolkit = { path = "../../libs/edge-toolkit" }
et-modules-service = { path = "../modules" }
et-storage-service = { path = "../storage" }
et-ws-service = { path = "../ws" }
futures-util = "0.3"
hostname = "0.4"
local-ip-address = "0.6"
log.workspace = true
opentelemetry = "0.31"
opentelemetry-appender-tracing = "0.31"
opentelemetry-otlp = { version = "0.31", default-features = false, features = [
  "http-json",
  "http-proto",
  "logs",
  "metrics",
  "reqwest-blocking-client",
  "trace",
] }
opentelemetry_sdk = "0.31"
qr2term = "0.3"
rcgen = "0.14"
regex = { version = "1.12", default-features = false }
rustls = "0.23"
rustls-pemfile = "2"
secrecy.workspace = true
serde.workspace = true
serde-env.workspace = true
serde-inline-default.workspace = true
serde_default.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing.workspace = true
tracing-actix-web = { version = "0.7", default-features = false, features = [
  "emit_event_on_error",
  "opentelemetry_0_31",
  "uuid_v7",
] }
tracing-log = "0.2"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid.workspace = true
