[package]
name = "et-ws-wasm-agent"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 or MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono.workspace = true
edge-toolkit = { path = "../../libs/edge-toolkit" }
js-sys = "0.3"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-wasm = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "AddEventListenerOptions",
  "BinaryType",
  "Document",
  "DomError",
  "Event",
  "EventTarget",
  "HtmlCanvasElement",
  "MediaDevices",
  "MediaStream",
  "MediaStreamConstraints",
  "MediaStreamTrack",
  "MessageEvent",
  "Navigator",
  "Storage",
  "WebSocket",
  "Window",
  "console",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
opt-level = "s"
