[package]
name = "et-ws-wasm-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono.workspace = true
edge-toolkit = { path = "../../libs/edge-toolkit" }
js-sys = "0.3"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-wasm = "0.2"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "BinaryType",
  "Document",
  "Event",
  "EventTarget",
  "HtmlCanvasElement",
  "MessageEvent",
  "Navigator",
  "Storage",
  "WebSocket",
  "Window",
  "console",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
opt-level = "s"
