[package]
name = "et-ws-service"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
actix = "0.13"
actix-web = "4"
actix-web-actors = "4"
chrono = { version = "0.4", features = ["serde"] }
edge-toolkit = { path = "../../libs/edge-toolkit" }
opentelemetry = "0.31"
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
tracing.workspace = true
uuid.workspace = true
