[package]
name = "et-cli"
description = "Edge Toolkit management CLI"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
edge-toolkit = { path = "../../libs/edge-toolkit" }
serde_yaml.workspace = true
