[package]
name = "et-cli"
description = "Edge Toolkit management CLI"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
edge-toolkit = { path = "../../libs/edge-toolkit" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile = "3"
