[package]
name = "pyproject-to-package-json"
description = "Generate pkg/package.json from a Python ws-module's pyproject.toml"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "pyproject-to-package-json"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
