[package]
name = "et-ws-data1"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
edge-toolkit = { path = "../../../libs/edge-toolkit" }
et-ws-wasm-agent = { path = "../../ws-wasm-agent" }
js-sys = "0.3"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-wasm = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Document",
  "Element",
  "HtmlTextAreaElement",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "console",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
