[project]
dependencies = []
description = "Python face detection"
license = "Apache-2.0 OR MIT"
name = "et-ws-pyface1"
requires-python = ">=3.10"
version = "0.1.0"

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.10.2,<0.11.0"]

[tool.uv.build-backend]
module-name = "pyface1"
module-root = ""

[tool.ws-module]
js-main = "et_ws_pyface1.js"

[tool.pytest.ini_options]
pythonpath = ["."]
# Optional: helps with modern import resolution
addopts = ["--import-mode=importlib"]
