[package]
description = "device sensor stream"
name = "et-ws-sensor1"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
et-web.workspace = true
et-ws-wasm-agent = { path = "../../ws-wasm-agent" }
js-sys = "0.3"
serde.workspace = true
serde-wasm-bindgen = "0.6"
serde_json.workspace = true
tracing.workspace = true
tracing-wasm = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Event", "EventTarget", "Navigator", "Window", "console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
